--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,15 @@
 		"testing"
 	],
 	"homepage"    : "https://github.com/nazar-pc/phpt-tests-runner",
-	"license"     : "MIT",
+	"license"     : "0BSD",
 	"require"     : {
 		"php" : ">=7.0"
 	},
 	"authors"     : [
 		{
-			"name"     : "Nazar Mokrynskyi",
-			"email"    : "nazar@mokrynskyi.com",
-			"homepage" : "http://cleverstyle.org/",
-			"role"     : "Developer"
+			"name"  : "Nazar Mokrynskyi",
+			"email" : "nazar@mokrynskyi.com",
+			"role"  : "Developer"
 		}
 	],
 	"bin"         : [
